--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
         "@types/papaparse": "^5.0.3",
         "express": "^4.17.1",
         "node-libcurl": "^2.0.3",
-        "papaparse": "^5.1.1"
+        "papaparse": "^5.2.0"
     },
     "description": "",
     "devDependencies": {
-        "@types/express": "^4.17.3",
-        "@types/node": "^13.9.1",
+        "@types/express": "^4.17.4",
+        "@types/node": "^13.11.0",
         "concurrently": "^5.1.0",
         "nodemon": "^2.0.2",
-        "tslint": "^6.1.0",
-        "typescript": "^3.8.3",
-        "prompt-input": "^3.0.0"
+        "prompt-input": "^3.0.0",
+        "tslint": "^6.1.1",
+        "typescript": "^3.8.3"
     },
     "keywords": [
         "Prometheus"
